<resources>
    <string name="app_name">WeightControl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="age">Возраст</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="activity">Спорт</string>
    <string name="fem">Женский</string>
    <string name="male">Мужской</string>
    <string name="count">Рассчитать</string>
    <string name="harris">Харриса-Бенедикта</string>
    <string name="mifflin">Миффлин-Сан Жеора</string>
    <string name="formula">Формула</string>
    <string name="gender">Пол</string>
    <string-array name="activities">
        <item></item>
        <item>отсутствие физ. активности</item>
        <item>1–2 раза в неделю</item>
        <item>3–4 раза в неделю</item>
        <item>5–7 раз в неделю</item>
        <item>ежедневные многократные тренировки</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calcs">Калькуляторы</string>
    <string name="imt">Индекс массы тела</string>
    <string name="percent">Процент жировой массы тела</string>
    <string name="idealweight">Расчет идеального веса</string>
    <string name="rsk">Расчет калорий в день</string>
    <string name="weightcontrol">Контроль веса</string>
    <string name="measures">Журнал взвешиваний</string>
    <string name="graphic">График изменений</string>
    <string name="_16"><![CDATA[< 16]]></string>
    <string name="vdmt">выраженный дефицит массы тела</string>
    <string name="dmt">дефицит массы тела</string>
    <string name="_16_18_5">16-18.5</string>
    <string name="norm">норма</string>
    <string name="_18_5_25">18.5-25</string>
    <string name="izbmt">избыточная масса тела</string>
    <string name="_25_30">25-30</string>
    <string name="ops">ожирение первой степени</string>
    <string name="_30_35">30-35</string>
    <string name="_35_40">35-40</string>
    <string name="ovs">ожирение второй степени</string>
    <string name="ots">ожирение третьей степени</string>
    <string name="_40"><![CDATA[>40]]></string>
    <string name="index_massi_tela">Индекс массы тела</string>
    <string name="_22"><![CDATA[< 22%]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="rasschet">рассчитать</string>
    <string name="welcome">Добро пожаловать\nв приложение\nКонтроль веса!</string>
    <string name="welcome2">Введите свои данные</string>
    <!--<string name="welcome">Welcome to WeightControl! \nPlease enter your personal details below </string>-->
    <string name="cm">см</string>
    <string name="kg">кг</string>
    <string name="neck">Шея</string>
    <string name="hip">Бедра</string>
    <string name="waist">Талия</string>

</resources>
