<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/calcs">
        <menu>
            <item
                android:id="@+id/nav_imt"
                android:icon="@drawable/male"
                android:title="@string/imt" />
            <item
                android:id="@+id/nav_fatmass"
                android:icon="@drawable/loseweight"

                android:title="@string/percent" />
            <item
                android:id="@+id/nav_idealweight"
                android:icon="@drawable/woman"
                android:title="@string/idealweight" />
            <item
                android:id="@+id/nav_rsk"
                android:icon="@drawable/diet"
                android:title="@string/rsk" />
        </menu>
    </item>

    <item android:title="@string/weightcontrol">
        <menu>
            <item
                android:id="@+id/nav_journal"
                android:icon="@drawable/scale"
                android:title="@string/measures" />
            <item
                android:id="@+id/nav_graphic"
                android:icon="@drawable/stats"
                android:title="@string/graphic" />
        </menu>
    </item>

</menu>
